# stock_price_predictor

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  stock_price_predictor.ipynb
.github/workflows/: ci.yml
configs/: default.yaml
docker/: Dockerfile  docker-compose.yml
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/app/: routes.ts
frontend/src/app/components/: Layout.tsx
frontend/src/app/pages/: BacktestResults.tsx  Comparison.tsx  Dashboard.tsx  Portfolio.tsx  Predictions.tsx  SentimentFeed.tsx  Watchlist.tsx
frontend/src/app/services/: api.ts
frontend/src/styles/: theme.css
src/: __init__.py
src/backtesting/: __init__.py  backtester.py
src/data/: __init__.py  data_pipeline.py  market_data.py  news_scraper.py  reddit_scraper.py
src/database/: db.py  models.py
src/features/: __init__.py  feature_engineering.py  sentiment.py  technical_indicators.py
src/models/: __init__.py  ensemble.py  lstm_model.py  trainer.py  xgboost_model.py
src/scheduling/: scheduler.py
src/serving/: app.py
src/utils/: __init__.py  config.py  logger.py
tests/: test_core.py
