[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-sentiment-engine"
version = "1.0.0"
description = "Production-grade market sentiment intelligence engine combining multi-source NLP sentiment analysis with ensemble ML models for stock movement prediction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Charan Kotapati", email = "charan@example.com"},
]
keywords = ["machine-learning", "nlp", "sentiment-analysis", "stock-prediction", "finbert", "mlops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # Data Ingestion
    "praw>=7.7.0",
    "yfinance>=0.2.31",
    "feedparser>=6.0.10",
    "requests>=2.31.0",

    # NLP & Sentiment
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "nltk>=3.8.1",
    "sentencepiece>=0.1.99",

    # ML Models
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.1.0",

    # Technical Indicators
    "ta>=0.11.0",

    # MLOps
    "mlflow>=2.9.0",

    # API Serving
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",

    # Utilities
    "pyyaml>=6.0.1",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "joblib>=1.3.0",
    "tqdm>=4.66.0",

    # Scheduling
    "apscheduler>=3.10.0",

    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
mse-train = "src.models.trainer:main"
mse-serve = "src.serving.app:main"
mse-scrape = "src.data.data_pipeline:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
